# cmake-raylib-template

./: README.md
cmake-raylib-template/: .gitignore  CMakeLists.txt  notes.txt
cmake-raylib-template/include/Engine/: window.h
cmake-raylib-template/include/Game/: game.h
cmake-raylib-template/libs/simplelogs/: CMakeLists.txt
cmake-raylib-template/libs/simplelogs/include/: logs.h
cmake-raylib-template/libs/simplelogs/src/: logs.cpp
cmake-raylib-template/resources/: t_new_arms.glb
cmake-raylib-template/src/: main.cpp
cmake-raylib-template/src/Engine/: window.cpp
cmake-raylib-template/src/Game/: game.cpp
